# ollama-swapper

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  README_JA.md  config.yaml  pyproject.toml  start-ollama.ps1  test-startup.ps1
docs/: thinking.md
scripts/: ps.ps1  start-ollama.ps1  start-proxy.ps1  stop.ps1  sweep.ps1
src/ollama_swapper/: __init__.py  cli.py  config.py  policy.py  proxy.py  sweep.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_config.py  test_policy.py  test_proxy.py  test_sweep.py
