[project]
name = "ollama-swapper"
version = "0.1.0"
description = "Proxy and CLI to enforce Ollama model policies"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "NewAITees"}]

dependencies = [
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
  "uvicorn>=0.29.0",
]

[project.scripts]
ollama-swapper = "ollama_swapper.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
